--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -13,7 +13,7 @@
 		</div>
 		<div class="span6">
 			<h3>Calculations</h3>
-			<p>The strategy may be fairly common however, some data is not readily available and thus needs calculated.  I have found that is it is rare to find volume rate of change data or charts so I calculated my own.  The volume rate of change is calculated similarly to that of the moving average: ((Vn - V) / Vn) * 100 where Vn is the volume n days ago and V is the previous day's volume.  As for other data, it was fairly easy to find and is provided in the Yahoo Finance API</p>
+			<p>The strategy may be fairly common however, some data is not readily available and thus needs calculated.  I have found that is it is rare to find volume rate of change data or charts so I calculated my own.  The volume rate of change is calculated similarly to that of the moving average: ((V - Vn) / Vn) * 100 where Vn is the volume n days ago and V is the previous day's volume.  As for other data, it was fairly easy to find and is provided in the Yahoo Finance API</p>
 		</div>
 	</div>
 </div>
